cloudflare-tunnel/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: fany.rendonindustries.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
